--- a/index.html
+++ b/index.html
@@ -1,44 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Un cirujano en Wall Street - Administración de Acciones y Crecimiento Patrimonial</title>
+     <title>Un cirujano en Wall Street</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="fixed-header">
         <div class="company-name">Un cirujano en Wall Street</div>
-        <nav class="social-links">
-            <a href="https://www.youtube.com/@albertolopezdelgado" target="_blank" aria-label="YouTube Channel"><img src="icons/youtube.png" alt="YouTube"></a>
-            <a href="https://www.instagram.com/albertolopezdelgado" target="_blank" aria-label="Instagram Profile"><img src="icons/instagram.png" alt="Instagram"></a>
-            <a href="mailto:info@yourcompany.com" aria-label="Email Us"><img src="icons/email.png" alt="Email"></a>
-        </nav>
+        <nav>
+            <ul> 
+                <li><a href="owner.html" class="button">Conozca a Nuestro Fundador</a></li>
+                <li><a href="projects.html" class="button">Descubra Futuros Proyectos</a></li>
+                <li><a href="market.html" class="button">Panorama Actual del Mercado</a></li>
+            </ul>
+            </nav>
     </header>
-
-<main class="content">
-    <section class="hero">
-        <h1>Su Socio en Administración de Acciones y Crecimiento Patrimonial</h1>
-        <p>Empoderamos a los clientes para administrar sus acciones sin problemas, navegar por los mercados bursátiles y gestionar sus inversiones con orientación experta y soluciones innovadoras.</p>
-        <div class="cta-buttons">
-            <a href="owner.html" class="button">Conozca a Nuestro Fundador</a>
-            <a href="projects.html" class="button">Descubra Futuros Proyectos</a>
-            <a href="market.html" class="button">Panorama Actual del Mercado</a>
-        </div>
-    </section>
-
-    <section class="about-us">
-        <h2>Nuestra Filosofía</h2>
-        <p>En Stokes & Co., creemos en la claridad, la precisión y la gestión proactiva de sus activos financieros. Nuestra plataforma está diseñada para proporcionarle herramientas y conocimientos integrales que le permitan tomar decisiones informadas sobre sus acciones e inversiones.</p>
-        <p>Ya sea que usted sea un inversor experimentado o esté comenzando, nuestro equipo dedicado está aquí para simplificar las complejidades del mercado, asegurando que su cartera esté optimizada para el crecimiento y la estabilidad. Nos enorgullecemos de construir relaciones duraderas basadas en la confianza y la transparencia, ayudándole a asegurar su futuro financiero.</p>
-    </section>
-</main>
+            <div class="introduction">
+                <h1>Su Socio en Administración de Acciones y Crecimiento Patrimonial</h1>
+                <p>Empoderamos a los clientes para administrar sus acciones sin problemas, navegar por los mercados bursátiles y gestionar sus inversiones con orientación experta y soluciones innovadoras.</p>
+            </div>
+     <main class="content">
+        <section class="two-by-two-grid-section">
+            <div class="grid-cell text-cell-1">
+                <h1>Su Socio en Administración de Acciones y Crecimiento Patrimonial</h1>
+                <p>Empoderamos a los clientes para administrar sus acciones sin problemas, navegar por los mercados bursátiles y gestionar sus inversiones con orientación experta y soluciones innovadoras.</p>
+            </div>
+            <div class="grid-cell image-cell-1">
+                <img src="images/finance.jpg" alt="Financial growth">
+            </div>
+            <div class="grid-cell image-cell-2">
+                <img src="images/output.jpg" alt="Successful investment">
+            </div>
+            <div class="grid-cell text-cell-2">
+                <h1>Mi meta es hacerte ganar</h1>
+                <p>Yo solo gano si tú ganas.</p>
+            </div>
+            <div class="grid-cell text-cell-1">
+                <h1>Nos amoldamos a tus preferencias</h1>
+                <p>Buscamos las empresas que más se adapten a tí.</p>
+            </div>
+            <div class="grid-cell image-cell-1">
+                <img src="images/money.jpg" alt="Money for you">
+            </div>
+        </section>
+             <section class="about-us">
+            <h2>Nuestra Filosofía</h2>
+            <p>En Un cirujano en Wall Street, creemos en la claridad, la precisión y la gestión proactiva de sus activos financieros. Nuestra plataforma está diseñada para proporcionarle herramientas y conocimientos integrales que le permitan tomar decisiones informadas sobre sus acciones e inversiones.</p>
+            <p>Ya sea que usted sea un inversor experimentado o esté comenzando, nuestro equipo dedicado está aquí para simplificar las complejidades del mercado, asegurando que su cartera esté optimizada para el crecimiento y la estabilidad. Nos enorgullecemos de construir relaciones duraderas basadas en la confianza y la transparencia, ayudándole a asegurar su futuro financiero.</p>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2025 Un cirujano en Wall Street. All rights reserved.</p>
+        <p>© 2025 Un cirujano en Wall Street. All rights reserved.</p>
+        <div class="social-links">
+             <a href="https://www.youtube.com/@yourchannel" target="_blank" aria-label="YouTube" title="Visita nuestro canal de YouTube"><img src="icons/youtube.png" alt="YouTube"></a>
+            <a href="https://www.instagram.com/albertolopezdelgado" target="_blank" aria-label="Instagram" title="Visita nuestro perfil de Instagram"><img src="icons/instagram.png" alt="Instagram"></a>
+            <a href="mailto:info@yourcompany.com" aria-label="Email" title="Envíanos un correo electrónico"><img src="icons/email.png" alt="Email"></a>
+        </div>
     </footer>
 
     <script src="script.js"></script>
