--- a/owner.html
+++ b/owner.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +7,27 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="fixed-header">
-        <div class="company-name">Un cirujano en Wall Street</div>
-        <nav class="social-links">
-            <a href="https://www.youtube.com/@albertolopezdelgado" target="_blank" aria-label="YouTube Channel"><img src="icons/youtube.png" alt="YouTube"></a>
-            <a href="https://www.instagram.com/albertolopezdelgado" target="_blank" aria-label="Instagram Profile"><img src="icons/instagram.png" alt="Instagram"></a>
-            <a href="mailto:info@yourcompany.com" aria-label="Email Us"><img src="icons/email.png" alt="Email"></a>
+        <a href="index.html" class="company-name-link">
+            <div class="company-name">Un cirujano en Wall Street</div>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="owner.html" class="button">Conozca a Nuestro Fundador</a></li>
+                <li><a href="projects.html" class="button">Descubra Futuros Proyectos</a></li>
+                <li><a href="market.html" class="button">Panorama Actual del Mercado</a></li>
+            </ul>
         </nav>
     </header>
 
     <main class="content">
         <section class="owner-bio">
             <h1>Conozca a Nuestro Fundador Visionario</h1>
-            <img src="images/owner.jpg" alt="[Nombre del Propietario]" class="owner-pic">
-            <p><strong>Alberto López Delgado</strong> es el visionario detrás de Stokes & Co., aportando más de dos décadas de experiencia inigualable en mercados financieros y administración de acciones. Él fundó la empresa con un objetivo singular: desmitificar las inversiones bursátiles y empoderar a los individuos para que tomen el control de su futuro financiero.</p>
+            <img src="images/owner.jpg" alt="Alberto López Delgado" class="owner-pic">
+            <p><strong>Alberto López Delgado</strong> es el visionario detrás de Un cirujano en Wall Street, aportando más de dos décadas de experiencia inigualable en mercados financieros y administración de acciones. Él fundó la empresa con un objetivo singular: desmitificar las inversiones bursátiles y empoderar a los individuos para que tomen el control de su futuro financiero.</p>
             <p>El camino de Alberto comenzó como un apasionado analista de mercado de valores, ganando rápidamente reconocimiento por sus perspicaces conocimientos del mercado y su enfoque centrado en el cliente. Antes de establecer Stokes & Co., ocupa un puesto de liderazgo en una destacada instituciones financiera, donde lidera soluciones innovadoras para la gestión patrimonial y el éxito del cliente.</p>
             <p>Más allá de la sala de juntas, Alberto es un firme defensor de la educación financiera, participando a menudo en seminarios y talleres para compartir conocimientos e inspirar a la próxima generación de inversores. Cree que el acceso a información financiera clara y práctica es clave para construir una riqueza sostenible y fomentar el empoderamiento económico.</p>
             <p>Bajo el liderazgo de Alberto, "Un cirujano en Wall Street" ha crecido de una idea incipiente a un socio de confianza para innumerables clientes, comprometida con la integridad, la innovación y el éxito inquebrantable del cliente.</p>
@@ -34,8 +38,14 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Un cirujano en Wall Street. All rights reserved.</p>
+        <p>© 2025 Un cirujano en Wall Street. All rights reserved.</p>
+        <div class="social-links">
+             <a href="https://www.youtube.com/@yourchannel" target="_blank" aria-label="YouTube" title="Visita nuestro canal de YouTube"><img src="icons/youtube.png" alt="YouTube"></a>
+            <a href="https://www.instagram.com/albertolopezdelgado" target="_blank" aria-label="Instagram" title="Visita nuestro perfil de Instagram"><img src="icons/instagram.png" alt="Instagram"></a>
+            <a href="mailto:info@yourcompany.com" aria-label="Email" title="Envíanos un correo electrónico"><img src="icons/email.png" alt="Email"></a>
+        </div>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
